--- a/index.html
+++ b/index.html
@@ -1,213 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Daily Quests - Solo Leveling</title>
+  <meta charset="UTF-8">
+  <title>Daily Quest Panel - Solo Leveling</title>
   <style>
-    /* Base Styles */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Arial', sans-serif;
+      font-family: 'Courier New', monospace;
     }
 
     body {
-      background: linear-gradient(135deg, #0a0a1a, #1a1a2f);
-      color: #fff;
+      background: #0a0c15;
+      color: #e0e0e0;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       min-height: 100vh;
-      padding: 1rem;
+      padding: 20px;
     }
 
-    .quest-container {
-      background: rgba(0, 0, 0, 0.8);
-      border: 2px solid #3d5afe;
-      border-radius: 12px;
-      padding: 2rem;
+    .quest-panel {
+      background: rgba(0, 0, 0, 0.9);
       width: 100%;
-      max-width: 450px;
+      max-width: 500px;
+      padding: 30px;
+      border-radius: 8px;
       position: relative;
       overflow: hidden;
-      box-shadow: 0 0 30px rgba(61, 90, 254, 0.2);
     }
 
-    .quest-container::before {
-      content: '';
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: linear-gradient(45deg, transparent, #3d5afe, transparent);
-      animation: glow 6s linear infinite;
-      opacity: 0.1;
+    .header {
+      border-bottom: 2px solid #3d5afe;
+      padding-bottom: 15px;
+      margin-bottom: 25px;
     }
 
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 0.5rem;
-      text-align: center;
-      text-transform: uppercase;
-      letter-spacing: 2px;
+    .title {
+      font-size: 1.8em;
       color: #3d5afe;
+      text-transform: uppercase;
+      letter-spacing: 3px;
       text-shadow: 0 0 10px rgba(61, 90, 254, 0.5);
     }
 
-    h2 {
-      font-size: 1rem;
-      text-align: center;
-      margin-bottom: 2rem;
-      color: #888;
-      font-weight: 300;
+    .subtitle {
+      color: #6b7280;
+      font-size: 0.9em;
+      margin-top: 5px;
     }
 
-    .goal {
-      margin: 1.5rem 0;
-      padding: 1rem;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 8px;
+    .quest-item {
+      padding: 15px 0;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
       cursor: pointer;
       transition: all 0.3s ease;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .quest-item:hover {
+      background: rgba(61, 90, 254, 0.05);
+    }
+
+    .quest-item.completed {
+      color: #4ade80;
       position: relative;
     }
 
-    .goal:hover {
-      background: rgba(61, 90, 254, 0.1);
-      transform: translateY(-2px);
-    }
-
-    .goal.completed {
-      background: rgba(76, 222, 128, 0.1);
-      border-color: #4ade80;
-    }
-
-    .goal-title {
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      color: #fff;
-    }
-
-    .goal-title::after {
-      content: '';
-      width: 20px;
-      height: 20px;
-      border: 2px solid #3d5afe;
-      border-radius: 50%;
-      margin-left: auto;
-      transition: all 0.3s ease;
-    }
-
-    .goal.completed .goal-title::after {
-      background: #4ade80;
-      border-color: #4ade80;
+    .quest-item.completed::after {
       content: '✓';
+      color: #4ade80;
+      margin-left: 15px;
+      animation: checkPop 0.3s ease;
+    }
+
+    .progress-container {
+      margin-top: 25px;
+      background: rgba(255, 255, 255, 0.1);
+      height: 4px;
+      border-radius: 2px;
+    }
+
+    .progress-bar {
+      height: 100%;
+      background: #3d5afe;
+      transition: width 0.5s ease;
+    }
+
+    @keyframes checkPop {
+      0% { transform: scale(0); }
+      90% { transform: scale(1.2); }
+      100% { transform: scale(1); }
+    }
+
+    .status-bar {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #000;
-      font-size: 12px;
+      justify-content: space-between;
+      margin-top: 20px;
+      color: #6b7280;
+      font-size: 0.9em;
     }
 
-    .caution {
-      margin-top: 2rem;
-      padding: 1rem;
-      background: rgba(248, 113, 113, 0.1);
-      border: 1px solid #f87171;
-      border-radius: 8px;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #f87171;
-    }
-
-    @keyframes glow {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+    .rewards {
+      margin-top: 25px;
+      padding: 15px;
+      background: rgba(76, 222, 128, 0.1);
+      border-left: 3px solid #4ade80;
     }
   </style>
 </head>
 <body>
-  <div class="quest-container">
-    <h1>Daily Quests</h1>
-    <h2>Complete before midnight</h2>
-
-    <div class="goal" onclick="toggleGoal('pushups')">
-      <div class="goal-title">100 Push-ups</div>
+  <div class="quest-panel">
+    <div class="header">
+      <div class="title">Daily Quest System</div>
+      <div class="subtitle">Complete all objectives before reset</div>
     </div>
 
-    <div class="goal" onclick="toggleGoal('situps')">
-      <div class="goal-title">100 Sit-ups</div>
+    <div class="quest-item" onclick="toggleQuest('pushups')">
+      <span>Push-Ups</span>
+      <span>0/100</span>
     </div>
 
-    <div class="goal" onclick="toggleGoal('squats')">
-      <div class="goal-title">100 Squats</div>
+    <div class="quest-item" onclick="toggleQuest('situps')">
+      <span>Sit-Ups</span>
+      <span>0/100</span>
     </div>
 
-    <div class="goal" onclick="toggleGoal('run')">
-      <div class="goal-title">10km Run</div>
+    <div class="quest-item" onclick="toggleQuest('squats')">
+      <span>Squats</span>
+      <span>0/100</span>
     </div>
 
-    <div class="caution">
-      ⚠️ Incomplete quests will reduce your stats!
+    <div class="quest-item" onclick="toggleQuest('run')">
+      <span>10km Run</span>
+      <span>0/10 km</span>
+    </div>
+
+    <div class="status-bar">
+      <span>Daily Completion:</span>
+      <span>0%</span>
+    </div>
+
+    <div class="progress-container">
+      <div class="progress-bar" style="width: 0%"></div>
+    </div>
+
+    <div class="rewards">
+      Potential Rewards: 
+      <span style="color: #4ade80">+500 XP</span> • 
+      <span style="color: #f59e0b">+10 Stats</span> • 
+      <span style="color: #3d5afe">Random Item</span>
     </div>
   </div>
 
   <script>
-    const goals = {
-      pushups: false,
-      situps: false,
-      squats: false,
-      run: false
+    const quests = {
+      pushups: { current: 0, target: 100, element: null },
+      situps: { current: 0, target: 100, element: null },
+      squats: { current: 0, target: 100, element: null },
+      run: { current: 0, target: 10, element: null }
     };
 
-    // Check daily reset
+    function initialize() {
+      document.querySelectorAll('.quest-item').forEach((item, index) => {
+        const key = Object.keys(quests)[index];
+        quests[key].element = item;
+        item.querySelector('span:last-child').textContent = 
+          `${quests[key].current}/${quests[key].target}${key === 'run' ? ' km' : ''}`;
+      });
+      checkDailyReset();
+      updateProgress();
+    }
+
+    function toggleQuest(questType) {
+      const quest = quests[questType];
+      quest.current = quest.current === quest.target ? 0 : quest.target;
+      quest.element.classList.toggle('completed', quest.current === quest.target);
+      quest.element.querySelector('span:last-child').textContent = 
+        `${quest.current}/${quest.target}${questType === 'run' ? ' km' : ''}`;
+      updateProgress();
+      saveProgress();
+    }
+
+    function updateProgress() {
+      const completed = Object.values(quests).filter(q => q.current === q.target).length;
+      const progress = (completed / Object.keys(quests).length) * 100;
+      document.querySelector('.progress-bar').style.width = `${progress}%`;
+      document.querySelector('.status-bar span:last-child').textContent = `${Math.round(progress)}%`;
+    }
+
     function checkDailyReset() {
       const lastReset = localStorage.getItem('lastReset');
       const currentDate = new Date().toDateString();
       
       if (!lastReset || lastReset !== currentDate) {
-        resetAll();
+        resetQuests();
         localStorage.setItem('lastReset', currentDate);
+      } else {
+        loadProgress();
       }
     }
 
-    // Toggle goal completion
-    function toggleGoal(goalName) {
-      const goalElement = document.querySelector(`[onclick="toggleGoal('${goalName}')"]`);
-      goals[goalName] = !goals[goalName];
-      goalElement.classList.toggle('completed');
-      localStorage.setItem('goals', JSON.stringify(goals));
-    }
-
-    // Reset all goals
-    function resetAll() {
-      document.querySelectorAll('.goal').forEach(goal => {
-        goal.classList.remove('completed');
+    function resetQuests() {
+      Object.values(quests).forEach(quest => {
+        quest.current = 0;
+        quest.element?.classList.remove('completed');
+        if(quest.element) {
+          quest.element.querySelector('span:last-child').textContent = 
+            `0/${quest.target}${quest === quests.run ? ' km' : ''}`;
+        }
       });
-      Object.keys(goals).forEach(key => goals[key] = false);
-      localStorage.setItem('goals', JSON.stringify(goals));
+      updateProgress();
     }
 
-    // Load saved state
+    function saveProgress() {
+      localStorage.setItem('questProgress', JSON.stringify(quests));
+    }
+
     function loadProgress() {
-      const savedGoals = localStorage.getItem('goals');
-      if (savedGoals) {
-        Object.assign(goals, JSON.parse(savedGoals));
-        Object.keys(goals).forEach(key => {
-          if (goals[key]) {
-            document.querySelector(`[onclick="toggleGoal('${key}')"]`).classList.add('completed');
+      const saved = localStorage.getItem('questProgress');
+      if (saved) {
+        const data = JSON.parse(saved);
+        Object.keys(quests).forEach(key => {
+          if (data[key]) {
+            quests[key].current = data[key].current;
+            if (quests[key].element) {
+              quests[key].element.classList.toggle('completed', data[key].current === data[key].target);
+              quests[key].element.querySelector('span:last-child').textContent = 
+                `${data[key].current}/${data[key].target}${key === 'run' ? ' km' : ''}`;
+            }
           }
         });
+        updateProgress();
       }
     }
 
-    // Initialize
-    checkDailyReset();
-    loadProgress();
+    // Initialize on load
+    window.onload = initialize;
     // Check for reset every minute
     setInterval(checkDailyReset, 60000);
   </script>
